--- a/featured-projects.css
+++ b/featured-projects.css
@@ -6,12 +6,19 @@ input[type='checkbox'] {
   display: none;
 }
 
+.project-container{ 
+  height: 100vh; 
+  display: flex; 
+  justify-content: space-around; 
+  align-items: center; 
+}
+
 .lbl-toggle {
   display: block;
-
+  width: 30%; 
   font-weight: bold;
   font-family: monospace;
-  font-size: 1.2rem;
+  font-size: 0.8rem;
   text-transform: uppercase;
   text-align: center;
 
