featured projects are animating constantly

--- a/featured-projects.css
+++ b/featured-projects.css
@@ -1,26 +1,59 @@
+.project-container{ 
+  height: 100vh; 
+  width: 100vw; 
+  display: flex; 
+  justify-content: space-around; 
+  align-items: center; 
+}
+
 .wrap-collabsible {
-  margin-bottom: 1.2rem 0;
+  margin: 0px; 
+  width: 10%; 
 }
 
 input[type='checkbox'] {
   display: none;
 }
 
-.project-container{ 
-  height: 100vh; 
-  display: flex; 
-  justify-content: space-around; 
-  align-items: center; 
+.one{ 
+  position: relative; 
+  animation-name: not-open; 
+  animation-duration: 4s; 
+  animation-iteration-count: infinite; 
+  animation-direction: alternate; 
+}
+
+.two{ 
+  position: relative; 
+  animation-name: not-open; 
+  animation-duration: 4s; 
+  animation-iteration-count: infinite; 
+  animation-direction: alternate; 
+}
+
+.three{
+  position: relative; 
+  animation-name: not-open; 
+  animation-duration: 4s;
+  animation-iteration-count: infinite; 
+  animation-direction: alternate; 
+}
+
+@keyframes not-open{ 
+  from { top: 0%; }
+  to { top: 40%; }
 }
 
 .lbl-toggle {
   display: block;
-  width: 30%; 
+
   font-weight: bold;
   font-family: monospace;
   font-size: 0.8rem;
   text-transform: uppercase;
   text-align: center;
+
+  margin: 0px; 
 
   padding: 1rem;
 
@@ -76,4 +109,5 @@ input[type='checkbox'] {
   border-bottom-left-radius: 7px;
   border-bottom-right-radius: 7px;
   padding: .5rem 1rem;
+
 }
